# pandas

./: Intro2021.xlsx  Telefonia.xlsx  main.py  pandas_2021_ar (2) (1).py  pandas_2021_ar.py  pyproject.toml
